--- a/index.html
+++ b/index.html
@@ -7,25 +7,16 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_TRACKING_ID"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-  gtag('config', 'G-W0M47RVX74');
-</script>
 </head>
 <body>
-    <header class="animate-on-load">
+    <header>
         <nav>
             <ul>
-                <li><a href="projects.html" class="click-animate">Projects</a></li>
-                <li><a href="publications.html" class="click-animate">Publications</a></li>
-                <li><a href="research-interests.html" class="click-animate">Research Interests</a></li>
-                <li><a href="teaching.html" class="click-animate">Teaching</a></li>
-                <li><a href="awards.html" class="click-animate">Awards/Honor/Services</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="research-interests.html">Research Interests</a></li>
+                <li><a href="teaching.html">Teaching</a></li>
+                <li><a href="awards.html">Awards/Honor/Services</a></li>
             </ul>
         </nav>
     </header>
