--- a/publicatons.html
+++ b/publicatons.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - Dhanesh Raj</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
     <header>
@@ -22,6 +24,7 @@
         <section id="publications">
             <h2>Publications</h2>
             <ul class="publication-list">
+                <!-- List of publications -->
                 <li>Sruthy Anand, Dhanesh Raj, A.M. Abhishek Sai, Sethuraman N Rao, and Maneesha V Ramesh. 2023. "<i>Techno-Social Synergy for Disaster Resilience in Coastal Communities: A Sustainable Approach</i>", In Proceedings of the 24th International Conference on Distributed Computing and Networking (ICDCN '23). <a href="https://doi.org/10.1145/3571306.3571437">Paper</a></li>
                 <li>D. Raj, M. V. Ramesh and S. N. Rao "<i>Link Quality Measurements for Marine Vehicular to Infrastructure Network (V2I)</i>", 2020 International Conference on COMmunication Systems & NETworkS (COMSNETS), Bengaluru, India, 2020. <a href="https://ieeexplore.ieee.org/document/9027379">Paper</a></li>
                 <li>D Raj "<i>Performance Evaluation of QoS in Marine Vehicle to Infrastructure (V2I) Network</i>", 2020 International Conference on COMmunication Systems & NETworkS (COMSNETS), Bengaluru, India, 2020. <a href="https://ieeexplore.ieee.org/document/9027424">Paper</a></li>
@@ -53,6 +56,6 @@
             <a href="https://github.com/Dhanesh-raj" target="_blank" rel="noopener noreferrer"><img src="github-icon.png" alt="GitHub"></a>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </body>
 </html>
