--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Main</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="research-interests.html">Research Interests</a></li>
