--- a/publicatons.html
+++ b/publicatons.html
@@ -9,10 +9,6 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">
-        <i class="fas fa-moon"></i>
-    </button>
-    
     <header class="sticky-header">
         <nav>
             <div class="logo">Dhanesh Raj</div>
@@ -20,6 +16,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
                 <li><a href="research-interests.html">Research</a></li>
                 <li><a href="teaching.html">Teaching</a></li>
                 <li><a href="awards.html">Awards</a></li>
@@ -37,7 +34,7 @@
     <main>
         <section id="publications" class="section">
             <h2>Publications</h2>
-            <ul class="publication-list">
+            <ul>
                 <li>Sruthy Anand, Dhanesh Raj, A.M. Abhishek Sai, Sethuraman N Rao, and Maneesha V Ramesh. 2023. "<i>Techno-Social Synergy for Disaster Resilience in Coastal Communities: A Sustainable Approach</i>", In Proceedings of the 24th International Conference on Distributed Computing and Networking (ICDCN '23). <a href="https://doi.org/10.1145/3571306.3571437">Paper</a></li>
                 <li>D. Raj, M. V. Ramesh and S. N. Rao "<i>Link Quality Measurements for Marine Vehicular to Infrastructure Network (V2I)</i>", 2020 International Conference on COMmunication Systems & NETworkS (COMSNETS), Bengaluru, India, 2020. <a href="https://ieeexplore.ieee.org/document/9027379">Paper</a></li>
                 <li>D Raj "<i>Performance Evaluation of QoS in Marine Vehicle to Infrastructure (V2I) Network</i>", 2020 International Conference on COMmunication Systems & NETworkS (COMSNETS), Bengaluru, India, 2020. <a href="https://ieeexplore.ieee.org/document/9027424">Paper</a></li>
@@ -70,4 +67,3 @@
     </footer>
 </body>
 </html>
-
