--- a/research-interests.html
+++ b/research-interests.html
@@ -9,10 +9,6 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">
-        <i class="fas fa-moon"></i>
-    </button>
-    
     <header class="sticky-header">
         <nav>
             <div class="logo">Dhanesh Raj</div>
@@ -23,6 +19,7 @@
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="research-interests.html">Research</a></li>
                 <li><a href="teaching.html">Teaching</a></li>
+                <li><a href="awards.html">Awards</a></li>
             </ul>
         </nav>
     </header>
