--- a/index.html
+++ b/index.html
@@ -37,33 +37,12 @@
         </ul>
     </nav>
 
-    <!-- Main Content -->
+    <!-- Main Sections -->
     <main>
-        <section id="home" class="section">
-            <h1>Welcome to My Portfolio</h1>
-            <img src="images/profile.jpg" alt="Dhanesh Raj" class="profile-img">
-            <p>Senior Research Associate | Wireless Networks Enthusiast</p>
-        </section>
-
-        <section id="projects" class="section">
-            <h2>Projects</h2>
-            <p>Research in public safety networks and marine vehicular IoT.</p>
-        </section>
-
-        <section id="research-interests" class="section">
-            <h2>Research Interests</h2>
-            <p>Exploring 6G, ORAN, IoT, and propagation models.</p>
-        </section>
-
-        <section id="teaching" class="section">
-            <h2>Teaching</h2>
-            <p>Experienced in wireless communication and networking courses.</p>
-        </section>
-
-        <section id="awards" class="section">
-            <h2>Awards & Honors</h2>
-            <p>Recipient of multiple research grants and awards.</p>
-        </section>
+        <iframe src="projects.html" class="iframe-section" title="Projects"></iframe>
+        <iframe src="research-interests.html" class="iframe-section" title="Research Interests"></iframe>
+        <iframe src="teaching.html" class="iframe-section" title="Teaching"></iframe>
+        <iframe src="awards.html" class="iframe-section" title="Awards & Honors"></iframe>
     </main>
 
     <!-- Footer with Social Links -->
